--- a/KWh Meter Reading Estimation Algorithm.ipynb
+++ b/KWh Meter Reading Estimation Algorithm.ipynb
@@ -219,7 +219,7 @@
     "import csv\n",
     "\n",
     "data = pd.read_csv('data_kwh.csv')\n",
-    "data.head()  "
+    "data[.head()  "
    ]
   },
   {
