--- a/KWh_Meter_Reading_Estimation_Algorithm.ipynb
+++ b/KWh_Meter_Reading_Estimation_Algorithm.ipynb
@@ -217,18 +217,18 @@
    "outputs": [],
    "source": [
     "y = data_kwh['ExportWhTotal'].tolist()\n",
-    "z = []\n",
+    "data_clean = []\n",
     "\n",
     "for data in y:\n",
     "    if data > 0:\n",
     "        if data < 90000000:\n",
-    "            z.append(data)\n",
+    "            data_clean.append(data)\n",
     "        else:\n",
-    "          z.append(None)\n",
+    "          data_clean.append(np.nan)\n",
     "    else:\n",
-    "      z.append(None)\n",
+    "      data_clean.append(np.nan)\n",
     "\n",
-    "x = list(range(0, len(z)))"
+    "x = list(range(0, len(data_clean)))"
    ]
   },
   {
@@ -260,7 +260,7 @@
     "f = plt.figure()\n",
     "f.set_figwidth(50)\n",
     "f.set_figheight(30)\n",
-    "p = plt.plot(x, z)"
+    "p = plt.plot(x, data_clean)"
    ]
   },
   {
@@ -278,7 +278,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x151deb2df40>]"
+       "[<matplotlib.lines.Line2D at 0x2200b65feb0>]"
       ]
      },
      "execution_count": 4,
@@ -300,17 +300,17 @@
    ],
    "source": [
     "#data asli\n",
-    "b = []\n",
+    "data_asli = []\n",
     "\n",
     "for data in y:\n",
     "    if data > 0:\n",
     "        if data < 90000000:\n",
-    "            b.append(data)\n",
-    "a = list(range(0, len(b)))\n",
-    "f = plt.figure()\n",
-    "f.set_figwidth(50)\n",
-    "f.set_figheight(30)\n",
-    "plt.plot(a, b)"
+    "            data_asli.append(data)\n",
+    "a = list(range(0, len(data_asli)))\n",
+    "fig = plt.figure()\n",
+    "fig.set_figwidth(50)\n",
+    "fig.set_figheight(30)\n",
+    "plt.plot(a, data_asli)"
    ]
   },
   {
@@ -349,36 +349,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2021.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
        "      <td>Tahun Baru</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>12</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2021.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2021</td>\n",
        "      <td>Tahun Baru Imlek</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>11</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2021.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021</td>\n",
        "      <td>Isra Miraj</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>14</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2021.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021</td>\n",
        "      <td>Nyepi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2021.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021</td>\n",
        "      <td>Wafat Isa Al Masih</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -386,12 +386,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  Day   Month    Year                 Ket\n",
-       "0    1    1.0  2021.0          Tahun Baru\n",
-       "1   12    2.0  2021.0    Tahun Baru Imlek\n",
-       "2   11    3.0  2021.0          Isra Miraj\n",
-       "3   14    3.0  2021.0               Nyepi\n",
-       "4    2    4.0  2021.0  Wafat Isa Al Masih"
+       "   Day   Month   Year                 Ket\n",
+       "0     1      1   2021          Tahun Baru\n",
+       "1    12      2   2021    Tahun Baru Imlek\n",
+       "2    11      3   2021          Isra Miraj\n",
+       "3    14      3   2021               Nyepi\n",
+       "4     2      4   2021  Wafat Isa Al Masih"
       ]
      },
      "execution_count": 5,
@@ -411,34 +411,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Day   Month    Year                 Ket\n",
-      "0       1    1.0  2021.0          Tahun Baru\n",
-      "1      12    2.0  2021.0    Tahun Baru Imlek\n",
-      "2      11    3.0  2021.0          Isra Miraj\n",
-      "3      14    3.0  2021.0               Nyepi\n",
-      "4       2    4.0  2021.0  Wafat Isa Al Masih\n",
-      "..    ...    ...     ...                 ...\n",
-      "56     25   12.0  2019.0     Hari Raya Natal\n",
-      "57    NaN    NaN     NaN                 NaN\n",
-      "58    NaN    NaN     NaN                 NaN\n",
-      "59  Puasa    NaN     NaN                 NaN\n",
-      "60   Day     NaN     NaN                 NaN\n",
-      "\n",
-      "[61 rows x 4 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "k = data_libur\n",
-    "print(k)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
