--- a/KWh_Meter_Reading_Estimation_Algorithm.ipynb
+++ b/KWh_Meter_Reading_Estimation_Algorithm.ipynb
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import csv\n",
     "\n",
-    "url = 'https://raw.githubusercontent.com/elianrichard/kwh_meter/master/data_kwh.csv'\n",
+    "url = 'https://raw.githubusercontent.com/elianrichard/kwh_meter/master/data_kwh_2.csv'\n",
     "url_libur = 'https://raw.githubusercontent.com/elianrichard/kwh_meter/master/data_libur.csv'\n",
     "url_puasa = 'https://raw.githubusercontent.com/elianrichard/kwh_meter/master/data_puasa.csv'\n",
     "data_libur = pd.read_csv(url_libur)\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -293,18 +293,182 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-6-cc9d06cb8927>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-cc9d06cb8927>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>ExportWhTotal</th>\n",
+       "      <th>ImportWhTotal</th>\n",
+       "      <th>Weekday</th>\n",
+       "      <th>Weekend</th>\n",
+       "      <th>HariLibur</th>\n",
+       "      <th>MakanSiang</th>\n",
+       "      <th>PulangKerja</th>\n",
+       "      <th>JamTidur</th>\n",
+       "      <th>Subuh</th>\n",
+       "      <th>Pagi</th>\n",
+       "      <th>Siang</th>\n",
+       "      <th>Sore</th>\n",
+       "      <th>Malam</th>\n",
+       "      <th>TengahMalam</th>\n",
+       "      <th>BulanPuasa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30-12-2019</td>\n",
+       "      <td>0:00:00</td>\n",
+       "      <td>40031250.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>30-12-2019</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>38718750.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30-12-2019</td>\n",
+       "      <td>1:00:00</td>\n",
+       "      <td>37437500.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>30-12-2019</td>\n",
+       "      <td>1:30:00</td>\n",
+       "      <td>36000000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>30-12-2019</td>\n",
+       "      <td>2:00:00</td>\n",
+       "      <td>34843750.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date     Hour  ExportWhTotal  ImportWhTotal  Weekday  Weekend  \\\n",
+       "0  30-12-2019  0:00:00     40031250.0              0      NaN      NaN   \n",
+       "1  30-12-2019  0:30:00     38718750.0              0      NaN      NaN   \n",
+       "2  30-12-2019  1:00:00     37437500.0              0      NaN      NaN   \n",
+       "3  30-12-2019  1:30:00     36000000.0              0      NaN      NaN   \n",
+       "4  30-12-2019  2:00:00     34843750.0              0      NaN      NaN   \n",
+       "\n",
+       "   HariLibur  MakanSiang  PulangKerja  JamTidur  Subuh  Pagi  Siang  Sore  \\\n",
+       "0        NaN         NaN          NaN       NaN    NaN   NaN    NaN   NaN   \n",
+       "1        NaN         NaN          NaN       NaN    NaN   NaN    NaN   NaN   \n",
+       "2        NaN         NaN          NaN       NaN    NaN   NaN    NaN   NaN   \n",
+       "3        NaN         NaN          NaN       NaN    NaN   NaN    NaN   NaN   \n",
+       "4        NaN         NaN          NaN       NaN    NaN   NaN    NaN   NaN   \n",
+       "\n",
+       "   Malam  TengahMalam  BulanPuasa  \n",
+       "0    NaN          NaN         NaN  \n",
+       "1    NaN          NaN         NaN  \n",
+       "2    NaN          NaN         NaN  \n",
+       "3    NaN          NaN         NaN  \n",
+       "4    NaN          NaN         NaN  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "i = 0\n",
-    "while i < len(data_kwh):\n",
-    "    "
+    "# while i < len(data_kwh):\n",
+    "data_kwh.head()"
    ]
   },
   {
@@ -312,19 +476,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "abc = data_kwh.tolist()\n",
-    "print(abc)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(database_libur)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
